finally got it working, still not sure how, but at least i got the initial divs stacking at the same width, still more to do on the articles section

--- a/index.html
+++ b/index.html
@@ -652,7 +652,118 @@
           <div class="articles-section">
             <div id="article-list" class="flex">
               <!-- <div class="row"> -->
-              <div></div>
+              <div class="article-item flex">
+                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
+                <div class="article-item-image">
+                  <picture>
+                    <source srcset="assets/images/8.articles/tom-lancaster-KBne.webp" type="image/webp" />
+                    <source srcset="assets/images/8.articles/tom-lancaster-KBne.png" type="image/png" />
+                    <img src="assets/images/8.articles/tom-lancaster-KBne.png" class="img-responsive" alt="" />
+                  </picture>
+                </div>
+                <!-- End of article-item-image -->
+                <div class="article-item-block">
+                  <h3>
+                    <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
+                    <span class="read-time"> - 4 minute read </span>
+                  </h3>
+
+                  <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
+
+                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+
+                  <div class="user">
+                    <div class="avatar">
+                      <picture>
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                      </picture>
+                    </div>
+                    <div class="details">
+                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                      1st July 2024
+                    </div>
+                  </div>
+                </div>
+                <!-- End of article-item-block -->
+              </div>
+              <!-- End of article item div -->
+              <div class="article-item flex">
+                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
+                <div class="article-item-image">
+                  <picture>
+                    <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.webp" type="image/webp" />
+                    <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.png" type="image/png" />
+                    <img src="assets/images/8.articles/tessa-dempsey-Yo3X.png" class="img-responsive" alt="" />
+                  </picture>
+                </div>
+                <!-- End of article-item-image -->
+                <div class="article-item-block">
+                  <h3>
+                    <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
+                    <span class="read-time"> - 4 minute read </span>
+                  </h3>
+
+                  <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
+
+                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+
+                  <div class="user">
+                    <div class="avatar">
+                      <picture>
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                      </picture>
+                    </div>
+                    <div class="details">
+                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                      1st July 2024
+                    </div>
+                  </div>
+                </div>
+                <!-- End of article-item-block -->
+              </div>
+              <!-- End of article item 2 div -->
+
+              <div class="article-item flex">
+                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
+                <div class="article-item-image">
+                  <picture>
+                    <source srcset="assets/images/8.articles/amanda-sharp-MN7f.webp" type="image/webp" />
+                    <source srcset="assets/images/8.articles/amanda-sharp-MN7f.png" type="image/png" />
+                    <img src="assets/images/8.articles/amanda-sharp-MN7f.png" class="img-responsive" alt="" />
+                  </picture>
+                </div>
+                <!-- End of article-item-image -->
+                <div class="article-item-block">
+                  <h3>
+                    <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
+                    <span class="read-time"> - 4 minute read </span>
+                  </h3>
+
+                  <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
+
+                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+
+                  <div class="user">
+                    <div class="avatar">
+                      <picture>
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                      </picture>
+                    </div>
+                    <div class="details">
+                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                      1st July 2024
+                    </div>
+                  </div>
+                </div>
+                <!-- End of article-item-block -->
+              </div>
+              <!-- End of article item 3 div -->
 
               <!-- </div>              End of row div, putting for reference, not sure if i need it -->
             </div>
