finished the articles section apart from the news image and the view all on xsmall screen

--- a/index.html
+++ b/index.html
@@ -649,119 +649,119 @@
             <!-- End of container for articles bar div -->
           </div>
           <!-- End of articles bar div -->
-          <div class="articles-section">
-            <div id="article-list" class="flex">
+          <div class="articles-section" id="container-articles-section">
+            <div id="articles-list" class="flex">
               <!-- <div class="row"> -->
-              <div class="article-item flex">
-                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
-                <div class="article-item-image">
+              <div class="articles-item flex">
+                <a class="articles-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
+                <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/tom-lancaster-KBne.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/tom-lancaster-KBne.png" type="image/png" />
                     <img src="assets/images/8.articles/tom-lancaster-KBne.png" class="img-responsive" alt="" />
                   </picture>
                 </div>
-                <!-- End of article-item-image -->
-                <div class="article-item-block">
+                <!-- End of articles-item-image -->
+                <div class="articles-item-block">
                   <h3>
                     <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
-                    <span class="read-time"> - 4 minute read </span>
+                    <span> - 4 minute read </span>
                   </h3>
 
                   <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
 
-                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+                  <a class="button__articles button__articles--read-more-1" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
 
-                  <div class="user">
-                    <div class="avatar">
+                  <div class="articles-item-block-user">
+                    <div class="">
                       <picture>
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
                       </picture>
                     </div>
-                    <div class="details">
-                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                    <div class="">
+                      <strong class="">Posted by Netmatters </strong><br />
                       1st July 2024
                     </div>
                   </div>
                 </div>
-                <!-- End of article-item-block -->
+                <!-- End of articles-item-block -->
               </div>
-              <!-- End of article item div -->
-              <div class="article-item flex">
-                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
-                <div class="article-item-image">
+              <!-- End of article item 1 div -->
+              <div class="articles-item flex">
+                <a class="articles-item-link" href="https://www.netmatters.co.uk/news/tessa-dempsey-netmatters-5-year-legend"></a>
+                <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.png" type="image/png" />
                     <img src="assets/images/8.articles/tessa-dempsey-Yo3X.png" class="img-responsive" alt="" />
                   </picture>
                 </div>
-                <!-- End of article-item-image -->
-                <div class="article-item-block">
+                <!-- End of articles-item-image -->
+                <div class="articles-item-block">
                   <h3>
-                    <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
-                    <span class="read-time"> - 4 minute read </span>
+                    <a href="https://www.netmatters.co.uk/news/tessa-dempsey-netmatters-5-year-legend"> Tessa Dempsey – Netmatters 5 Year Legend </a>
+                    <span> - 4 minute read </span>
                   </h3>
 
-                  <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
+                  <p>Tessa Dempsey – Netmatters 5 Year Legend Today, we celebrate the brilliant accomplishments of Tessa...</p>
 
-                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+                  <a class="button__articles button__articles--read-more-1" href="https://www.netmatters.co.uk/news/tessa-dempsey-netmatters-5-year-legend"> Read More </a>
 
-                  <div class="user">
-                    <div class="avatar">
+                  <div class="articles-item-block-user">
+                    <div class="">
                       <picture>
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
                       </picture>
                     </div>
-                    <div class="details">
-                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                    <div class="">
+                      <strong class="">Posted by Netmatters </strong><br />
                       1st July 2024
                     </div>
                   </div>
                 </div>
-                <!-- End of article-item-block -->
+                <!-- End of articles-item-block -->
               </div>
               <!-- End of article item 2 div -->
 
-              <div class="article-item flex">
-                <a class="article-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
-                <div class="article-item-image">
+              <div class="articles-item flex">
+                <a class="articles-item-link" href="https://www.netmatters.co.uk/news/amanda-sharp-netmatters-5-year-legend"></a>
+                <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/amanda-sharp-MN7f.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/amanda-sharp-MN7f.png" type="image/png" />
                     <img src="assets/images/8.articles/amanda-sharp-MN7f.png" class="img-responsive" alt="" />
                   </picture>
                 </div>
-                <!-- End of article-item-image -->
-                <div class="article-item-block">
+                <!-- End of articles-item-image -->
+                <div class="articles-item-block">
                   <h3>
-                    <a href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Tom Lancaster – Netmatters 10 Year Hero </a>
-                    <span class="read-time"> - 4 minute read </span>
+                    <a href="https://www.netmatters.co.uk/news/amanda-sharp-netmatters-5-year-legend"> Amanda Sharp – Netmatters 5 Year Legend </a>
+                    <span> - 4 minute read </span>
                   </h3>
 
-                  <p>Tom Lancaster – Netmatters 10 Year Hero Today, we celebrate the brilliant accomplishments of Tom Lan...</p>
+                  <p>Amanda Sharp – Netmatters 5 Year Legend Today, we celebrate the brilliant accomplishments of Amanda...</p>
 
-                  <a class="btn btn-bus-dev" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"> Read More </a>
+                  <a class="button__articles button__articles--read-more-2" href="https://www.netmatters.co.uk/news/amanda-sharp-netmatters-5-year-legend"> Read More </a>
 
-                  <div class="user">
-                    <div class="avatar">
+                  <div class="articles-item-block-user">
+                    <div class="">
                       <picture>
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.webp" type="image/webp" />
-                        <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="https://www.netmatters.co.uk/assets/images/thumbnails/article_contact_thumb/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
+                        <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
                       </picture>
                     </div>
-                    <div class="details">
-                      <strong class="text-primary">Posted by Netmatters </strong><br />
+                    <div class="">
+                      <strong class="">Posted by Netmatters </strong><br />
                       1st July 2024
                     </div>
                   </div>
                 </div>
-                <!-- End of article-item-block -->
+                <!-- End of articles-item-block -->
               </div>
               <!-- End of article item 3 div -->
 
