just a lot of stuff done to get the border working, took too long, i need to start thinking more out of the box, fixed an issue with one image in the flex item being bigger when there was no reason for it, and did the tooltip, section should be done except for the view more url underneath on the xsmall mq

--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
               <h2>Latest News</h2>
 
               <h3>
-                <a href="https://www.netmatters.co.uk/articles">View All &nbsp<span class="icon__articles--view-all-right-arrow"></span></a>
+                <a href="https://www.netmatters.co.uk/articles">View All &nbsp;<span class="icon__articles--view-all-right-arrow"></span></a>
               </h3>
             </div>
             <!-- </div> -->
@@ -654,11 +654,12 @@
               <!-- <div class="row"> -->
               <div class="articles-item flex">
                 <a class="articles-item-link" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero"></a>
+                <a class="articles-item-tooltip" href="https://www.netmatters.co.uk/news/tom-lancaster-netmatters-10-year-hero">News</a>
                 <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/tom-lancaster-KBne.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/tom-lancaster-KBne.png" type="image/png" />
-                    <img src="assets/images/8.articles/tom-lancaster-KBne.png" class="img-responsive" alt="" />
+                    <img src="assets/images/8.articles/tom-lancaster-KBne.png" class="" alt="" />
                   </picture>
                 </div>
                 <!-- End of articles-item-image -->
@@ -677,7 +678,7 @@
                       <picture>
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="" alt="Netmatters " />
                       </picture>
                     </div>
                     <div class="">
@@ -691,11 +692,12 @@
               <!-- End of article item 1 div -->
               <div class="articles-item flex">
                 <a class="articles-item-link" href="https://www.netmatters.co.uk/news/tessa-dempsey-netmatters-5-year-legend"></a>
+                <a class="articles-item-tooltip" href="https://www.netmatters.co.uk/news/tessa-dempsey-netmatters-5-year-legend">News</a>
                 <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/tessa-dempsey-Yo3X.png" type="image/png" />
-                    <img src="assets/images/8.articles/tessa-dempsey-Yo3X.png" class="img-responsive" alt="" />
+                    <img src="assets/images/8.articles/tessa-dempsey-Yo3X.png" class="" alt="" />
                   </picture>
                 </div>
                 <!-- End of articles-item-image -->
@@ -714,7 +716,7 @@
                       <picture>
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="" alt="Netmatters " />
                       </picture>
                     </div>
                     <div class="">
@@ -729,11 +731,12 @@
 
               <div class="articles-item flex">
                 <a class="articles-item-link" href="https://www.netmatters.co.uk/news/amanda-sharp-netmatters-5-year-legend"></a>
+                <a class="articles-item-tooltip-2" href="https://www.netmatters.co.uk/news/amanda-sharp-netmatters-5-year-legend">News</a>
                 <div class="articles-item-image">
                   <picture>
                     <source srcset="assets/images/8.articles/amanda-sharp-MN7f.webp" type="image/webp" />
                     <source srcset="assets/images/8.articles/amanda-sharp-MN7f.png" type="image/png" />
-                    <img src="assets/images/8.articles/amanda-sharp-MN7f.png" class="img-responsive" alt="" />
+                    <img src="assets/images/8.articles/amanda-sharp-MN7f.png" class="" alt="" />
                   </picture>
                 </div>
                 <!-- End of articles-item-image -->
@@ -752,7 +755,7 @@
                       <picture>
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.webp" type="image/webp" />
                         <source srcset="assets/images/8.articles/netmatters-ltd-VXAv.png" type="image/png" />
-                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="img-responsive" alt="Netmatters " />
+                        <img src="assets/images/8.articles/netmatters-ltd-VXAv.png" class="" alt="Netmatters " />
                       </picture>
                     </div>
                     <div class="">
