--- a/index.html
+++ b/index.html
@@ -783,7 +783,7 @@
         <div class="flex clients-section">
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Ashcroft Partnership LLP</h3>
                 <p>
                   Originally founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising entrepreneurs
@@ -805,7 +805,7 @@
           <!-- End of client_item 1 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>One Traveller</h3>
                 <p><a href="https://www.onetraveller.co.uk/" target="_blank" rel="">One Traveller</a>, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
                 <a href="https://www.netmatters.co.uk/case-studies/one-traveller-web-case-study" class="button">
@@ -824,7 +824,7 @@
           <!-- End of client_item 2 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Searles Leisure Resort</h3>
                 <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
                 <a href="https://www.netmatters.co.uk/case-studies/searles-leisure-resort" class="button">
@@ -843,7 +843,7 @@
           <!-- End of client_item 3 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Busseys</h3>
                 <p>One of the UK's leading Ford dealerships.</p>
 
@@ -859,7 +859,7 @@
           <!-- End of client_item 4 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Crane Garden Buildings</h3>
                 <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
                 <div class="bottomtriange"></div>
@@ -874,7 +874,7 @@
           <!-- End of client_item 5 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Black Swan Care Group</h3>
                 <p>Black Swan Care Group own and manage 21 high-quality care and residential homes with a focus on putting the needs of their residents first.</p>
                 <a href="https://www.netmatters.co.uk/case-studies/black-swan-care-group-home-management-software" class="button">
@@ -893,7 +893,7 @@
           <!-- End of client_item 6 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Xupes</h3>
                 <p>Xupes</p>
 
@@ -909,7 +909,7 @@
           <!-- End of client_item 7 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>BEAT</h3>
                 <p>The UK's eating disorder charity founded in 1989.</p>
 
@@ -925,7 +925,7 @@
           <!-- End of client_item 8 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Survey Solutions</h3>
                 <p>Survey Solutions</p>
 
@@ -941,7 +941,7 @@
           <!-- End of client_item 9 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Girl Guiding Anglia</h3>
                 <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young women in the UK.</p>
                 <a href="https://www.netmatters.co.uk/girl-guides-case-study" class="button">
@@ -960,7 +960,7 @@
           <!-- End of client_item 10 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Sweetzy</h3>
                 <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
                 <a href="https://www.netmatters.co.uk/digital-marketing-case-study-sweetzy" class="button">
@@ -979,7 +979,7 @@
           <!-- End of client_item 11 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>Howes Percival</h3>
                 <p>Howes Percival.</p>
 
@@ -995,7 +995,7 @@
           <!-- End of client_item 12 -->
           <div class="clients-item">
             <div class="clients-details">
-              <div class="clients_box">
+              <div class="clients-box">
                 <h3>GDST</h3>
                 <p>The <a href="https://www.gdst.net/">Girls' Day School Trust (GDST)</a> is the UK's leading family of 25 independent girls' schools.</p>
                 <a href="https://www.netmatters.co.uk/case-studies/gdst-case-study" class="button">
