finished footer and bottom footer

--- a/index.html
+++ b/index.html
@@ -1016,6 +1016,187 @@
         <!-- End of clients section -->
       </div>
       <!-- End of container for middle section -->
+      <footer>
+        <div class="container">
+          <div class="footer-flex">
+            <div class="footer-company-info">
+              <div class="">
+                <div class="">
+                  <picture>
+                    <source srcset="assets/images/10.footer/nm-logo-white-med.webp" type="image/webp" />
+                    <source srcset="assets/images/10.footer/nm-logo-white-med.png" type="image/png" />
+                    <img src="assets/images/10.footer/nm-logo-white.png" alt="Netmatters Logo" />
+                  </picture>
+                </div>
+                <h4>Follow us on:</h4>
+                <div class="">
+                  <a class="" href="https://en-gb.facebook.com/netmatters/" target="_blank" rel="">
+                    <span class="icon__footer--facebook"></span>
+                  </a>
+
+                  <a class="" href="https://www.linkedin.com/company/netmatters-ltd/" target="_blank" rel="">
+                    <span class="icon__footer--linkedin"></span>
+                  </a>
+
+                  <a class="" href="https://x.com/netmattersltd" target="_blank" rel="">
+                    <span class="icon__footer--twitter"></span>
+                  </a>
+
+                  <a class="" href="https://www.instagram.com/netmattersltd/" target="_blank" rel="">
+                    <span class="icon__footer--instagram"></span>
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer-menu-flex">
+              <div class="footer-menu-item">
+                <h4>About Netmatters</h4>
+
+                <ul>
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/news"> News </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/our-careers"> Our Careers </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/team"> Our Team </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/contact-us"> Contact Us </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/privacy-policy"> Privacy Policy </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/cookie-policy"> Cookie Policy </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/data-retention-disposal-policy"> Data Retention &amp; Disposal Policy </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/cctv-policy"> CCTV Policy </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/our-culture/environmental-policy"> Environmental Policy </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/terms-and-conditions"> Terms &amp; Conditions </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-menu-item">
+                <h4>Our Services</h4>
+
+                <ul>
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/bespoke-software"> Bespoke Software </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/it-support"> IT Support </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/digital-marketing"> Digital Marketing </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/telecoms-services"> Telecoms Services </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/web-design"> Web Design </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/cyber-security"> Cyber Security </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/train-for-a-career-in-tech"> Developer Training </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-menu-item">
+                <h4>Our Industries</h4>
+
+                <ul>
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/financial-services"> Financial Services </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/construction"> Construction </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/e-commerce"> Retail &amp; E-Commerce </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/non-profits"> Non-Profits </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/smes"> SME's </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/healthcare"> Healthcare </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/education-training"> Education &amp; Training </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/industries/travel-leisure"> Travel &amp; Leisure </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="footer-menu-item">
+                <h4>Locations</h4>
+
+                <ul>
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/cambridge-office"> Cambridge Office </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/wymondham-office"> Wymondham Office </a>
+                  </li>
+
+                  <li class=" ">
+                    <a href="https://www.netmatters.co.uk/yarmouth-office"> Great Yarmouth Office </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!-- End of footer -->
+      <div class="footer-bottom">
+        <div class="container footer-bottom-container">
+          <div class="flex footer-bottom-copyright">
+            <span>© Copyright Netmatters 2024.</span>
+            <span>All rights reserved.</span>
+            <span>&nbsp; - &nbsp;</span>
+            <a href="https://www.netmatters.co.uk/sitemap.xml">Sitemap </a>
+          </div>
+        </div>
+      </div>
     </div>
     <!-- End of id container div -->
   </body>
