went back and did the banner in a rush, is messy code, but works good enough for now with media queries, am gonna submit the assessment and move on to the next task, a lot of code needs refactoring, i started off well, and then my style has changed throughout.

--- a/index.html
+++ b/index.html
@@ -386,7 +386,32 @@
       <!-- End of id header div -->
 
       <div id="banner">
-        <img src="assets/images/4.banner/home-YLei.webp" />
+        <div class="banner-item flex">
+          <div class="banner-item-image">
+            <picture>
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.webp" type="image/webp" />
+              <source srcset="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.png" type="image/png" />
+              <img
+                src="https://www.netmatters.co.uk/assets/images/thumbnails/full_height_slideshow/home-YLei.png"
+                class=""
+                alt="The East Of England's Leading Technology Company Norwich, Norfolk, Cambridge, North London, Essex, Hertfordshire, Enfield"
+              />
+            </picture>
+          </div>
+          <!-- End of banner item image -->
+          <div class="container">
+            <div class="banner-item-content">
+              <h1>The East Of England's Leading Technology Company</h1>
+              <p>Performance-driven digital and technology services with complete transparency.</p>
+              <a href="https://www.netmatters.co.uk/why-choose-us" class="button__banner--button-1">
+                Why Choose Us? &nbsp;
+                <span class="icon__banner--right-arrow"></span>
+              </a>
+            </div>
+            <!-- End of banner item content -->
+          </div>
+        </div>
+        <!-- End of banner item 1 -->
       </div>
       <!-- End of banner div -->
       <div class="container">
